# Restaurant_Simulator_COS214_Group_Project

./: .gitignore  README.md  makefile  skeleton_code.cpp
.circleci/: config.yml
.github/workflows/: main.yml
Design/: Design_COS214_Group_Project.vpd  README.md
Images/: README.md
_Resources/: README.md  doxygen.txt
docker/: DockerCommands.txt  README.md  docker-compose-build.yaml  docker-compose.yaml
src/: AssemblyChef.cpp  Bill.cpp  Bill.h  CMakeLists.txt  CustomerSession.cpp  CustomerSession.h  Dockerfile  FryCook.cpp  GrillCook.cpp  Iterator.cpp  KitchenManager.h  KitchenStaff.cpp  KitchenStaff.h  KitchenStation.h  List.cpp  List.h  Makefile  Manager.cpp  Node.h  Order.cpp  Order.h  README.md  Restaurant.cpp  Restaurant.h  SingleBill.cpp  SousChef.cpp  SplitBill.cpp  SplitBill.h  Staff.cpp  StaffCheckup.cpp  StaffCheckup.h  Tab.cpp  Tab.h  TabStore.cpp  TabStore.h  Table.cpp  Table.h  TableCollection.h  TableComposite.h  TemporaryTableClass.h  (+4 more)
src/Bill/: Bill.cpp  Bill.h  SingleBill.cpp  SingleBill.h  SplitBill.cpp  SplitBill.h
src/Booking/: Booking.cpp  Booking.h  BookingStrategy.h  BookingSystem.cpp  BookingSystem.h  CustomerIntake.cpp  CustomerIntake.h  Reserved.cpp  Reserved.h  WalkIn.cpp  WalkIn.h
src/Builder/: HugeMacBuilder.cpp  HugeMacBuilder.h  KotaPounderBuilder.cpp  KotaPounderBuilder.h  Order.cpp  Order.h  OrderBuilder.cpp  OrderBuilder.h  OrderDirector.cpp  OrderDirector.h  OrderItem.cpp  OrderItem.h  WackCrispyBuilder.cpp  WackCrispyBuilder.h  WackNuggetsBuilder.cpp  WackNuggetsBuilder.h
src/ChainOfResponsibility/: AssemblyChef.cpp  AssemblyChef.h  FryCook.cpp  FryCook.h  GrillCook.cpp  GrillCook.h  KitchenManager.cpp  KitchenManager.h  KitchenStaff.cpp  KitchenStaff.h  KitchenStation.cpp  KitchenStation.h  SousChef.cpp  SousChef.h
src/List/: Iterator.cpp  Iterator.h  Iterator.tpp  List.cpp  List.h  List.tpp  Node.cpp  Node.h  Node.tpp  TableCollection.cpp  TableCollection.h
src/Staff/: Manager.cpp  Manager.h  Staff.cpp  Staff.h  StaffCheckup.cpp  StaffCheckup.h  TemporaryTableClass.cpp  TemporaryTableClass.h  Waiter.cpp  Waiter.h  WaiterManager.cpp  WaiterManager.h
src/State/: Complete.cpp  Complete.h  Ordering.h  Paying.cpp  Paying.h  Ready.cpp  Ready.h  TableState.h  Unready.cpp  Unready.h  Waiting.cpp  Waiting.h
src/Tab/: Tab.cpp  Tab.h  TabStore.cpp  TabStore.h
src/Table/: Table.cpp  Table.h  TableComponent.cpp  TableComponent.h  TableComposite.cpp  TableComposite.h
src/WaiterManager/: WaiterManager.cpp  WaiterManager.h
test/: BookingTest.cpp  BuilderTest.cpp  CMakeLists.txt  ChainOfResponsibility1Test.cpp  ChainOfResponsibility2Test.cpp  ListAndIteratorTest.cpp  OrderClassTest.cpp  README.md  SingleBillTest.cpp  SplitBillTest.cpp  StaffCheckupTest.cpp  TabStore.cpp  TabTest.cpp  TableCollectionTest.cpp  allIncludes.h  main_test.cpp  makefile  reservePrompt.txt  test.cpp  walkInPrompt.txt
